# travel-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
_vendor/: wecom-aibot-node-sdk-1.0.4.tgz  wecom-wecom-openclaw-plugin-2026.3.20.tgz
_vendor/aibot_sdk/package/: README.md  package.json
app/: __init__.py  config.py  container.py  errors.py  main.py  schemas.py
app/providers/: __init__.py  common.py  llm.py  qq.py  route.py  search.py  weather.py
app/services/: __init__.py  formatter.py  intent_router.py  orchestrator.py  planner.py  qq_longconn.py  reply_agent.py  session_store.py  wecom.py  wecom_longconn.py
caddy/: Caddyfile
nginx/: nginx.conf
